eip.tf

resource "aws_eip" "nat_t03_1a" {


  vpc = true


}





resource "aws_eip" "nat_t03_1c" {


  vpc = true


}
